# SimpleDAC

./: .gitignore  README.md  simpledac.c
Caddy/: simpledac_caddy_bottom.stl  simpledac_caddy_top.stl
Examples/: README.md
Examples/function_generator/: CMakeLists.txt  main.c
Examples/function_generator2/: CMakeLists.txt  main.cpp
Examples/micromanager/: main.cpp  simpledac.hpp  test.py
Examples/serial_function_generator/: build.sh  main.cpp
Examples/triggered_function_generator/: build_payload.sh  main.cpp
PCB/: OffboardDAC.kicad_pcb  OffboardDAC.kicad_prl  OffboardDAC.kicad_pro  OffboardDAC.pro  README.md  SimpleDAC.kicad_pcb  SimpleDAC.kicad_prl  SimpleDAC.kicad_pro  SimpleDAC.kicad_sch  fp-info-cache  parts.csv
